change pig image

--- a/assets/css/flappy.css
+++ b/assets/css/flappy.css
@@ -61,7 +61,7 @@
  * 	@description 飞扬的猪
  */
 #pig {
-	background: url(../image/pig.png);
+	background: url(../image/pig.gif);
 	left: 30px;
 	top: 260px;
 	position: absolute;
